[gd_scene load_steps=12 format=3 uid="uid://d0rclp60hws5i"]

[ext_resource type="Script" path="res://ENEMIES/Tank.gd" id="1_0qeuw"]
[ext_resource type="Texture2D" uid="uid://bpqdba4eosbea" path="res://ENEMIES/Tank.png" id="1_350bw"]

[sub_resource type="Animation" id="Animation_btnmi"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_350bw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_y011q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area3D:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yj6bv"]
length = 0.8
loop_mode = 1
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_350bw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area3D:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6, 0.785),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MeshInstance3D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.6, 0.785),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_he8wt"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_350bw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2rscb"]
_data = {
"Death": SubResource("Animation_btnmi"),
"RESET": SubResource("Animation_y011q"),
"Shoot": SubResource("Animation_yj6bv"),
"Walk": SubResource("Animation_he8wt")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7lkwc"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_dj7jt"]
material = SubResource("StandardMaterial3D_7lkwc")
top_radius = 0.05
bottom_radius = 0.05
height = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_a1syg"]
points = PackedVector3Array(-0.05, -0.5, 0, -0.0497651, -0.5, -0.00490407, -0.0497651, -0.5, 0.00489428, -0.05, 0.5, 0, -0.0490407, -0.5, -0.0097592, -0.0497651, 0.5, -0.00490407, -0.0490407, -0.5, 0.00974941, -0.0497651, 0.5, 0.00489428, -0.0478563, -0.5, -0.0145164, -0.0490407, 0.5, -0.0097592, -0.0478563, -0.5, 0.0145067, -0.0490407, 0.5, 0.00974941, -0.046202, -0.5, -0.0191367, -0.0478563, 0.5, -0.0145164, -0.046202, -0.5, 0.0191269, -0.0478563, 0.5, 0.0145067, -0.0440975, -0.5, -0.0235709, -0.046202, 0.5, -0.0191367, -0.0440975, -0.5, 0.0235611, -0.046202, 0.5, 0.0191269, -0.0415818, -0.5, -0.02778, -0.0440975, 0.5, -0.0235709, -0.0415818, -0.5, 0.0277702, -0.0440975, 0.5, 0.0235611, -0.0386551, -0.5, -0.0317247, -0.0415818, 0.5, -0.02778, -0.0386551, -0.5, 0.031715, -0.0415818, 0.5, 0.0277702, -0.0353563, -0.5, -0.0353563, -0.0386551, 0.5, -0.0317247, -0.0353563, -0.5, 0.0353465, -0.0386551, 0.5, 0.031715, -0.0317247, -0.5, -0.0386551, -0.0353563, 0.5, -0.0353563, -0.0317247, -0.5, 0.0386453, -0.0353563, 0.5, 0.0353465, -0.02778, -0.5, -0.0415818, -0.0317247, 0.5, -0.0386551, -0.02778, -0.5, 0.041572, -0.0317247, 0.5, 0.0386453, -0.0235709, -0.5, -0.0440975, -0.02778, 0.5, -0.0415818, -0.0235709, -0.5, 0.0440877, -0.02778, 0.5, 0.041572, -0.0191367, -0.5, -0.046202, -0.0235709, 0.5, -0.0440975, -0.0191367, -0.5, 0.0461922, -0.0235709, 0.5, 0.0440877, -0.0145164, -0.5, -0.0478563, -0.0191367, 0.5, -0.046202, -0.0145164, -0.5, 0.0478465, -0.0191367, 0.5, 0.0461922, -0.0097592, -0.5, -0.0490407, -0.0145164, 0.5, -0.0478563, -0.0097592, -0.5, 0.0490309, -0.0145164, 0.5, 0.0478465, -0.00490407, -0.5, -0.0497651, -0.0097592, 0.5, -0.0490407, -0.00490407, -0.5, 0.0497553, -0.0097592, 0.5, 0.0490309, 0, -0.5, -0.05, -0.00490407, 0.5, -0.0497651, 0, -0.5, 0.05, -0.00490407, 0.5, 0.0497553, 0.00489428, -0.5, -0.0497651, 0, 0.5, -0.05, 0.00489428, -0.5, 0.0497553, 0, 0.5, 0.05, 0.00974941, -0.5, -0.0490407, 0.00489428, 0.5, -0.0497651, 0.00974941, -0.5, 0.0490309, 0.00489428, 0.5, 0.0497553, 0.0145067, -0.5, -0.0478563, 0.00974941, 0.5, -0.0490407, 0.0145067, -0.5, 0.0478465, 0.00974941, 0.5, 0.0490309, 0.0191269, -0.5, -0.046202, 0.0145067, 0.5, -0.0478563, 0.0191269, -0.5, 0.0461922, 0.0145067, 0.5, 0.0478465, 0.0235611, -0.5, -0.0440975, 0.0191269, 0.5, -0.046202, 0.0235611, -0.5, 0.0440877, 0.0191269, 0.5, 0.0461922, 0.0277702, -0.5, -0.0415818, 0.0235611, 0.5, -0.0440975, 0.0277702, -0.5, 0.041572, 0.0235611, 0.5, 0.0440877, 0.031715, -0.5, -0.0386551, 0.0277702, 0.5, -0.0415818, 0.031715, -0.5, 0.0386453, 0.0277702, 0.5, 0.041572, 0.0353465, -0.5, -0.0353563, 0.031715, 0.5, -0.0386551, 0.0353465, -0.5, 0.0353465, 0.031715, 0.5, 0.0386453, 0.0386453, -0.5, -0.0317247, 0.0353465, 0.5, -0.0353563, 0.0386453, -0.5, 0.031715, 0.0353465, 0.5, 0.0353465, 0.041572, -0.5, -0.02778, 0.0386453, 0.5, -0.0317247, 0.041572, -0.5, 0.0277702, 0.0386453, 0.5, 0.031715, 0.0440877, -0.5, -0.0235709, 0.041572, 0.5, -0.02778, 0.0440877, -0.5, 0.0235611, 0.041572, 0.5, 0.0277702, 0.0461922, -0.5, -0.0191367, 0.0440877, 0.5, -0.0235709, 0.0461922, -0.5, 0.0191269, 0.0440877, 0.5, 0.0235611, 0.0478465, -0.5, -0.0145164, 0.0461922, 0.5, -0.0191367, 0.0478465, -0.5, 0.0145067, 0.0461922, 0.5, 0.0191269, 0.0490309, -0.5, -0.0097592, 0.0478465, 0.5, -0.0145164, 0.0490309, -0.5, 0.00974941, 0.0478465, 0.5, 0.0145067, 0.0497553, -0.5, -0.00490407, 0.0490309, 0.5, -0.0097592, 0.0497553, -0.5, 0.00489428, 0.0490309, 0.5, 0.00974941, 0.05, -0.5, 0, 0.0497553, 0.5, -0.00490407, 0.0497553, 0.5, 0.00489428, 0.05, 0.5, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_ap867"]
size = Vector3(0.226196, 0.223763, 0.186218)

[node name="Tank" type="CharacterBody3D" groups=["Enemies"]]
script = ExtResource("1_0qeuw")

[node name="Sprite3D" type="Sprite3D" parent="."]
offset = Vector2(0, 16)
texture_filter = 0
texture = ExtResource("1_350bw")
hframes = 4
vframes = 4
frame = 5
metadata/_aseprite_wizard_config_ = {
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "Sprite3D/AnimationPlayer",
"source": "res://ENEMIES/Tank.aseprite"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite3D"]
libraries = {
"": SubResource("AnimationLibrary_2rscb")
}
autoplay = "Walk"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Sprite3D"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.612219, 0.150954, 0)
visible = false
mesh = SubResource("CylinderMesh_dj7jt")

[node name="Area3D" type="Area3D" parent="Sprite3D"]
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sprite3D/Area3D"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.612219, 0.150954, 0)
shape = SubResource("ConvexPolygonShape3D_a1syg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00274658, 0.11272, 0)
shape = SubResource("BoxShape3D_ap867")

[node name="RayCastRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.146259, 0, 0)
target_position = Vector3(0, -0.001, 0)
hit_from_inside = true

[node name="RayCastLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15748, 0, 0)
target_position = Vector3(0, -0.001, 0)
hit_from_inside = true

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.107485, 0)
disable_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_ap867")

[connection signal="body_entered" from="Sprite3D/Area3D" to="." method="_on_area_3d_body_entered"]
